--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/QZZP/QZZP_QZZP.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/QZZP/QZZP_QZZP.css
@@ -1,10 +1,6 @@
-﻿
-
-:-ms-input-placeholder {
+﻿:-ms-input-placeholder {
     color: #999;
 }
-
-
 
 .div_bqss {
     margin-top: -7px;
@@ -16,6 +12,7 @@
     box-shadow: 0px 0px 8px #888;
     border-radius: 4px;
     padding: 6px 10px;
+    float: left;
 }
 
 .div_zwlb_first {
@@ -49,7 +46,6 @@
     .div_zwlb_second_inner:hover {
         color: #fd634f;
     }
-
 
 .img_zwlb_second_inner {
     background-image: url(../images/arrow_down.png);
