--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZP_QZZP/QZZP_QZZP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/QZZP_QZZP/QZZP_QZZP.cshtml
@@ -85,9 +85,9 @@
                     <span id="spanPPMC">职位名称</span>
                 </div>
                 <div class="div_row_right">
-                    <input id="BT" maxlength="50" column="BT" class="span_spaninput SRK" style="width: 300px; padding: 6px 12px;" type="text" placeholder="请输入职位名称" />
-                    <div id="divZWMCTip"></div>
+                    <input id="BT" maxlength="50" column="BT" class="span_spaninput SRK" style="width: 300px; padding: 6px 12px;" type="text" placeholder="请输入职位名称"/>
                 </div>
+                <div id="divZWMCTip"></div>
             </div>
             <div id="divZPZWLB" class="div_row" style="margin-top: 22px; z-index: 999;">
                 <div class="div_row_left">
@@ -97,7 +97,7 @@
                 <div class="div_row_right">
                     <div id="divZWLBText" class="div_select_out SRK" style="position: relative;">
                         <div id="divZWLBSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="ZWLBID" />
+                            <input type="hidden" id="ZWLBID"/>
                             <span id="spanZWLB" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择职位类别</span>
                             <div class="span_select_arrow"></div>
                         </div>
@@ -105,6 +105,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divZPZWLBTip" class="Warn" style="z-index: 998; position: relative;"></div>
             </div>
             <div id="divZPRS" class="div_row" style="margin-top: 22px; z-index: 998;">
                 <div class="div_row_left">
@@ -116,8 +117,8 @@
                         <input class="input_spaninput spaninput_fontcolor" id="ZPRS" maxlength="9" column="ZPRS" type="text" style="width: 120px" />
                         <span class="spaninput_fontcolor">人</span>
                     </span>
-                    <div id="divZPRSTip"></div>
                 </div>
+                <div id="divZPRSTip"></div>
             </div>
             <div id="divZPMYXZ" class="div_row" style="z-index: 997;">
                 <div class="div_row_left">
@@ -134,6 +135,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divZPMYXZTip" class="Warn" style="z-index: 998; position: relative;"></div>
             </div>
             <div id="divZWFL" class="div_row" style="z-index: 994;">
                 <div class="div_row_left">
@@ -158,6 +160,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divZPXLYQTip" class="Warn" style="z-index: 998; position: relative;"></div>
             </div>
             <div id="divZPGZNX" class="div_row" style="z-index: 995;">
                 <div class="div_row_left">
@@ -174,6 +177,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divZPGZNXTip" class="Warn" style="z-index: 998; position: relative;"></div>
             </div>
             <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
                 <span class="span_split">职位描述</span>
