--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/PFCG_FSXM/PFCG_FSXM.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/PFCG_FSXM/PFCG_FSXM.cshtml
@@ -112,7 +112,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="divOUTLBTip" class="Warn" style="z-index: 998;"></div>
+                <div id="divOUTLBTip" class="Warn"></div>
             </div>
             <div id="divXXXX" class="div_split" style="display: block; text-align: left;">
                 <span class="span_split">特色描述</span>
