--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SHFW_SHFW_BJQX/SHFW_SHFW_BJQX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SHFW_SHFW_BJQX/SHFW_SHFW_BJQX.cshtml
@@ -88,7 +88,7 @@
                     <div id="divBTTip"></div>
                 </div>
             </div>
-            <div id="divLPLB" class="div_row" style="z-index: 999">
+            <div id="divOUTLB" class="div_row" style="z-index: 999">
                 <div class="div_row_left" style="margin-left: 128px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">类别</span>
@@ -104,14 +104,16 @@
                         </div>
                     </div>
                 </div>
+                <div id="divOUTLBTip"></div>
             </div>
             <div id="divXL" class="div_row" style="z-index: 998; display: none;">
                 <div class="div_row_left" style="margin-left: 128px;">
-                    <span class="span_required">&nbsp;</span>
+                    <span class="span_required">*</span>
                     <span id="spanXL">小类</span>
                 </div>
                 <div id="divXLText" class="div_row_right" style="position: relative;">
                 </div>
+                <div id="divXLTip"></div>
             </div>
             <div id="divFWQY" class="div_row" style="z-index: 998">
                 <div class="div_row_left">
