--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SHFW_WXFW_JJWX/SHFW_WXFW_JJWX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SHFW_WXFW_JJWX/SHFW_WXFW_JJWX.cshtml
@@ -88,7 +88,7 @@
                     <div id="divBTTip"></div>
                 </div>
             </div>
-            <div id="divJJWXLB" class="div_row" style="z-index: 999">
+            <div id="divOUTLB" class="div_row" style="z-index: 999">
                 <div class="div_row_left" style="margin-left: 128px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">类别</span>
@@ -96,7 +96,7 @@
                 <div class="div_row_right">
                     <div id="divLBText" class="div_select_out SRK" style="position: relative;">
                         <div id="divLBSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input id="LBID" type="hidden" />
+                            <input id="LBID" type="hidden"/>
                             <span id="spanLB" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择类别</span>
                             <div class="span_select_arrow"></div>
                         </div>
@@ -112,6 +112,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divOUTLBTip"></div>
             </div>
             <div id="divFWQY" class="div_row" style="z-index: 997">
                 <div class="div_row_left">
@@ -181,16 +182,16 @@
                     <span class="spanFWCZ">详细地址</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="QYCode" />
+                            <input type="hidden" id="QYCode"/>
                             <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
                             <div class="span_select_arrow"></div>
                         </div>
                         <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
                             <div class="span_select_arrow"></div>
@@ -198,8 +199,9 @@
                         <div id="divDD" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px" />
+                    <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px"/>
                 </div>
+                <div id="divSZQYTip"></div>
             </div>
             <div id="divLXR" class="div_row" style="z-index: 990">
                 <div class="div_row_left" style="margin-left: 114px;">
