--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SHFW_WXFW_JDWX/SHFW_WXFW_JDWX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SHFW_WXFW_JDWX/SHFW_WXFW_JDWX.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "SHFWSHFW_JDWX";
+    ViewBag.Title = "SHFW_WXFW_JDWX";
     Layout = "~/Areas/Business/Views/Shared/HTFBLayout.cshtml";
 }
 
