--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SHFW_CLFW_GHSPNJYC/SHFW_CLFW_GHSPNJYC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SHFW_CLFW_GHSPNJYC/SHFW_CLFW_GHSPNJYC.cshtml
@@ -84,17 +84,18 @@
                     <span id="spanBT">标题</span>
                 </div>
                 <div class="div_row_right">
-                    <input id="BT" maxlength="50" column="BT" class="span_spaninput SRK" style="width: 594px; padding: 6px 12px; color: #999999" type="text" placeholder="吸引人的标题可让更多的人看您的信息喔" />
+                    <input id="BT" maxlength="50" column="BT" class="input_input SRK" type="text" placeholder="吸引人的标题可让更多的人看您的信息喔" />
                     <div id="divBTTip"></div>
                 </div>
             </div>
-            <div id="divSJSJWPLB" class="div_row" style="z-index: 996;">
+            <div id="divOUTLB" class="div_row" style="z-index: 996;">
                 <div class="div_row_left" style="margin-left: 128px;">
                     <span class="span_required">*</span>
-                    <span id="spanSJSJWPLB">类别</span>
+                    <span id="spanOUTLB">类别</span>
                 </div>
-                <div id="divSJSJWPLBText" class="div_row_right" style="position: relative;">
+                <div id="divOUTLBText" class="div_row_right" style="position: relative;">
                 </div>
+                <div id="divOUTLBTip"></div>
             </div>
             <div id="divJG" class="div_row" style="z-index: 992;">
                 <div class="div_row_left" style="margin-left: 128px;">
@@ -177,16 +178,16 @@
                     <span class="spanFWCZ">详细地址</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="QYCode" />
+                            <input type="hidden" id="QYCode"/>
                             <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
                             <div class="span_select_arrow"></div>
                         </div>
                         <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
                             <div class="span_select_arrow"></div>
@@ -194,8 +195,9 @@
                         <div id="divDD" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px" />
+                    <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px"/>
                 </div>
+                <div id="divSZQYTip"></div>
             </div>
             <div id="divLXR" class="div_row" style="z-index: 990">
                 <div class="div_row_left" style="margin-left: 114px;">
