--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SHFW_CLFW_QCMRZS/SHFW_CLFW_QCMRZS.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SHFW_CLFW_QCMRZS/SHFW_CLFW_QCMRZS.cshtml
@@ -88,7 +88,7 @@
                     <div id="divBTTip"></div>
                 </div>
             </div>
-            <div id="divQCMRZSLB" class="div_row" style="z-index: 999">
+            <div id="divOUTLB" class="div_row" style="z-index: 999">
                 <div class="div_row_left" style="margin-left: 128px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">类别</span>
@@ -96,7 +96,7 @@
                 <div class="div_row_right">
                     <div id="divLBText" class="div_select_out SRK" style="position: relative;">
                         <div id="divLBSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="LBID" />
+                            <input type="hidden" id="LBID"/>
                             <span id="spanLB" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择类别</span>
                             <div class="span_select_arrow"></div>
                         </div>
@@ -104,6 +104,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divOUTLBTip"></div>
             </div>
             <div id="divQCMRZSXCDD" class="div_row" style="z-index: 998; display: none;">
                 <div class="div_row_left">
@@ -120,6 +121,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divQCMRZSXCDDTip"></div>
             </div>
             <div id="divQCMRZSXCFS" class="div_row" style="z-index: 997; display: none;">
                 <div class="div_row_left">
@@ -136,6 +138,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divQCMRZSXCFSTip"></div>
             </div>
             <div id="divQCMRZSPP" class="div_row" style="z-index: 996; display: none;">
                 <div class="div_row_left" style="margin-left: 128px;">
@@ -152,6 +155,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divQCMRZSPPTip"></div>
             </div>
             <div id="divQCMRZSPZ" class="div_row" style="z-index: 995; display: none;">
                 <div class="div_row_left" style="margin-left: 128px;">
@@ -168,6 +172,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divQCMRZSPZTip"></div>
             </div>
             <div id="divQCMRZSTMFW" class="div_row" style="z-index: 995; display: none;">
                 <div class="div_row_left">
@@ -184,6 +189,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divQCMRZSTMFWTip"></div>
             </div>
             <div id="divJG" class="div_row" style="z-index: 994;">
                 <div class="div_row_left" style="margin-left: 128px;">
@@ -256,16 +262,16 @@
                     <span class="spanFWCZ">详细地址</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="QYCode" />
+                            <input type="hidden" id="QYCode"/>
                             <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
                             <div class="span_select_arrow"></div>
                         </div>
                         <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
                             <div class="span_select_arrow"></div>
@@ -273,8 +279,9 @@
                         <div id="divDD" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px" />
+                    <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px"/>
                 </div>
+                <div id="divSZQYTip"></div>
             </div>
             <div id="divLXR" class="div_row" style="z-index: 990">
                 <div class="div_row_left" style="margin-left: 114px;">
