--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SWFW_GSZC/SWFW_GSZC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SWFW_GSZC/SWFW_GSZC.cshtml
@@ -95,6 +95,7 @@
                 </div>
                 <div id="divGSZCLBText" class="div_row_right" style="position: relative;">
                 </div>
+                <div id="divGSZCLBTip"></div>
             </div>
             <div id="divFWQY" class="div_row" style="z-index: 998">
                 <div class="div_row_left">
@@ -166,7 +167,7 @@
                 <div class="div_row_right">
                     <div id="divQYText" class="div_select_out SRK" style="z-index: 997; position: relative;">
                         <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="QYCode" />
+                            <input type="hidden" id="QYCode"/>
                             <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
                             <div class="span_select_arrow"></div>
                         </div>
@@ -181,8 +182,9 @@
                         <div id="divDD" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px" />
+                    <input id="JTDZ" column="JTDZ" class="span_spaninput input_input SRK" type="text" placeholder="请填写具体地址" style="width: 300px"/>
                 </div>
+                <div id="divSZQYTip"></div>
             </div>
             <div id="divLXR" class="div_row" style="z-index: 990">
                 <div class="div_row_left" style="margin-left: 114px;">
