--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SWFW_HYZX/SWFW_HYZX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/SWFW_HYZX/SWFW_HYZX.cshtml
@@ -85,29 +85,30 @@
                 </div>
                 <div class="div_row_right">
                     <div id="div_ysfw_gnhyzx" class="div_radio">
-                        <img class="img_radio" id="img_ysfw_gnhyzx" /><label class="label_radio">国内货运专线</label>
+                        <img class="img_radio" id="img_ysfw_gnhyzx"/><label class="label_radio">国内货运专线</label>
                     </div>
                     <div id="div_ysfw_gjhyzx" class="div_radio">
-                        <img class="img_radio" id="img_ysfw_gjhyzx" /><label class="label_radio">国际货运专线</label>
+                        <img class="img_radio" id="img_ysfw_gjhyzx"/><label class="label_radio">国际货运专线</label>
                     </div>
                 </div>
+                <div id="divYSFWTip"></div>
             </div>
-            <div id="divCFD" class="div_row" style="z-index: 999;">
+            <div id="divSZQY" class="div_row" style="z-index: 999;">
                 <div class="div_row_left" style="margin-left: 114px;">
                     <span class="span_required">*</span>
                     <span class="spanFWCZ">出发地</span>
                 </div>
                 <div class="div_row_right">
-                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divQYText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divQYSpan" class="div_select_in" style="border: none; margin-top: 6px;">
-                            <input type="hidden" id="QYCode" />
+                            <input type="hidden" id="QYCode"/>
                             <span id="spanQY" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择区域</span>
                             <div class="span_select_arrow"></div>
                         </div>
                         <div id="divQY" class="div_select_dropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997; ">
+                    <div id="divDDText" class="div_select_out SRK" style="z-index: 997;">
                         <div id="divDDSpan" class="div_select_in" style="border: none; margin-top: 6px;">
                             <span id="spanDD" class="span_select spaninput_fontcolor" style="margin-top: 0">请选择地段</span>
                             <div class="span_select_arrow"></div>
@@ -116,6 +117,7 @@
                         </div>
                     </div>
                 </div>
+                <div id="divSZQYTip"></div>
             </div>
             <div id="divDDD" class="div_row" style="z-index: 998">
                 <div class="div_row_left" style="margin-left: 114px;">
@@ -134,21 +136,22 @@
                 </div>
                 <div class="div_row_right">
                     <div id="div_hytd_gl" class="div_radio">
-                        <img class="img_radio" id="img_hytd_gl" /><label class="label_radio">公路</label>
+                        <img class="img_radio" id="img_hytd_gl"/><label class="label_radio">公路</label>
                     </div>
                     <div id="div_hytd_tl" class="div_radio">
-                        <img class="img_radio" id="img_hytd_tl" /><label class="label_radio">铁路</label>
+                        <img class="img_radio" id="img_hytd_tl"/><label class="label_radio">铁路</label>
                     </div>
                     <div id="div_hytd_hk" class="div_radio">
-                        <img class="img_radio" id="img_hytd_hk" /><label class="label_radio">航空</label>
+                        <img class="img_radio" id="img_hytd_hk"/><label class="label_radio">航空</label>
                     </div>
                     <div id="div_hytd_hey" class="div_radio">
-                        <img class="img_radio" id="img_hytd_hey" /><label class="label_radio">河运</label>
+                        <img class="img_radio" id="img_hytd_hey"/><label class="label_radio">河运</label>
                     </div>
                     <div id="div_hytd_haiy" class="div_radio">
-                        <img class="img_radio" id="img_hytd_haiy" /><label class="label_radio">海运</label>
+                        <img class="img_radio" id="img_hytd_haiy"/><label class="label_radio">海运</label>
                     </div>
                 </div>
+                <div id="divHYTDTip"></div>
             </div>
             <div id="divSFWF" class="div_row">
                 <div class="div_row_left">
@@ -157,12 +160,13 @@
                 </div>
                 <div class="div_row_right">
                     <div id="div_sfwf_dx" class="div_radio">
-                        <img class="img_radio" id="img_sfwf_dx" /><label class="label_radio">单向</label>
+                        <img class="img_radio" id="img_sfwf_dx"/><label class="label_radio">单向</label>
                     </div>
                     <div id="div_sfwf_sx" class="div_radio">
-                        <img class="img_radio" id="img_sfwf_sx" /><label class="label_radio">双向</label>
+                        <img class="img_radio" id="img_sfwf_sx"/><label class="label_radio">双向</label>
                     </div>
                 </div>
+                <div id="divSFWFTip"></div>
             </div>
             <div id="divYWZZ" class="div_row">
                 <div class="div_row_left">
@@ -171,15 +175,16 @@
                 </div>
                 <div class="div_row_right">
                     <div id="div_ywyz_zd" class="div_radio">
-                        <img class="img_radio" id="img_ywzz_zd" /><label class="label_radio">直达</label>
+                        <img class="img_radio" id="img_ywzz_zd"/><label class="label_radio">直达</label>
                     </div>
                     <div id="div_ywyz_yzz" class="div_radio">
-                        <img class="img_radio" id="img_ywzz_yzz" /><label class="label_radio">有中转</label>
+                        <img class="img_radio" id="img_ywzz_yzz"/><label class="label_radio">有中转</label>
                     </div>
                     <div id="div_ywyz_ly" class="div_radio">
-                        <img class="img_radio" id="img_ywzz_ly" /><label class="label_radio">联运</label>
+                        <img class="img_radio" id="img_ywzz_ly"/><label class="label_radio">联运</label>
                     </div>
                 </div>
+                <div id="divYWZZTip"></div>
             </div>
             <div id="divBC" class="div_row">
                 <div class="div_row_left" style="margin-left: 128px;">
@@ -188,12 +193,13 @@
                 </div>
                 <div class="div_row_right">
                     <div id="div_bc_gdbc" class="div_radio">
-                        <img class="img_radio" id="img_bc_gdbc" /><label class="label_radio">固定班次</label>
+                        <img class="img_radio" id="img_bc_gdbc"/><label class="label_radio">固定班次</label>
                     </div>
                     <div id="div_bc_bgdbc" class="div_radio">
-                        <img class="img_radio" id="img_bc_bgdbc" /><label class="label_radio">不固定班次</label>
+                        <img class="img_radio" id="img_bc_bgdbc"/><label class="label_radio">不固定班次</label>
                     </div>
                 </div>
+                <div id="divBCTip"></div>
             </div>
             <div id="divTZSJ" class="div_row" style="z-index: 990">
                 <div class="div_row_left">
@@ -201,9 +207,9 @@
                     <span id="spanTZSJ">途中时间</span>
                 </div>
                 <div class="div_row_right">
-                    <input id="TZSJ" column="TZSJ" class="span_spaninput input_input SRK" type="text" placeholder="请输入途中时间" />
-                    <div id="divTZSJTip"></div>
+                    <input id="TZSJ" column="TZSJ" class="span_spaninput input_input SRK" type="text" placeholder="请输入途中时间"/>
                 </div>
+                <div id="divTZSJTip"></div>
             </div>
             <div id="divZHFS" class="div_row" style="z-index: 997;">
                 <div class="div_row_left">
@@ -212,6 +218,7 @@
                 </div>
                 <div id="divZHFSText" class="div_row_right" style="position: relative;">
                 </div>
+                <div id="divZHFSTip"></div>
             </div>
             <div id="divHWZL" class="div_row" style="z-index: 996;">
                 <div class="div_row_left">
@@ -220,6 +227,7 @@
                 </div>
                 <div id="divHWZLText" class="div_row_right" style="position: relative;">
                 </div>
+                <div id="divHWZLTip"></div>
             </div>
             <div id="divFWYS" class="div_row" style="z-index: 995;">
                 <div class="div_row_left">
@@ -228,6 +236,7 @@
                 </div>
                 <div id="divFWYSText" class="div_row_right" style="position: relative;">
                 </div>
+                <div id="divFWYSTip"></div>
             </div>
             <div id="divYSJG" class="div_row" style="z-index: 994">
                 <div class="div_row_left">
